# SolidCloth

./: .gitignore  CMakeLists.txt  Queries.cpp  README.md  vcpkg-configuration.json  vcpkg.json
Demo/: ClothAPI.cpp  ClothAPI.h  ClothDemo.cpp  ClothDemo.h  ClothDemoAPI.cpp  ClothDemoAPI.h  DemoHost.cpp  DemoHost.h  DemoHostAPI.cpp  DemoHostAPI.h
Engine/: Base.cpp  Base.h  Engine.cpp  Engine.h  EngineWin32.inl  Platform.h  Profiler.cpp  Profiler.h  Profiler.inl  Utils.h  xml.cpp  xml.h
Geometry/: Aabb3.h  AabbTree.cpp  AabbTree.h  Assets.cpp  Assets.h  ClosestPointOnMesh.cpp  ClosestPointOnMesh.h  ClosestPointsBetweenMeshes.cpp  ClosestPointsBetweenMeshes.h  Collision3D.cpp  Collision3D.h  MarchingCubes.cpp  MarchingCubes.h  Mesh.cpp  Mesh.h  RaycastMesh.cpp  RaycastMesh.h  SDF.cpp  SDF.h  VoronoiRegions.cpp  VoronoiRegions.h
Graphics2D/: Color.h  Graphics.h  Graphics2D.h  Graphics2DGL.inl  Graphics2DGLS.cpp  Texture.h  TextureGL.cpp
Graphics3D/: Camera.h  Graphics3D.h  Graphics3DGLS.cpp  OpenGLSData.cpp  OpenGLSData.h
Math/: Matrix3.h  Matrix4.h  Quaternion.cpp  Quaternion.h  Utils.cpp  Utils.h  Vector2.h  Vector3.h  Vector4.h
Physics/: ClothCollision.cpp  ClothCollisionHandler.cpp  ClothCollisionHandler.h  ClothCollisionSDF.h  ClothModel.cpp  ClothModel.h  ClothModel.inl  ClothPBD.cpp  ClothPBD.h  ClothPatch.cpp  ClothPatch.h  ClothTypes.h  CollisionWorld.h  Common.h  SelfCollisionDetector.cpp  SelfCollisionDetector.h
Shaders/: pixel2d.shader  pixel2d_fb.shader  pixel2d_fb_rect.shader  pixel2drect.shader  shader_phong_fragment.glsl  shader_phong_geometry.glsl  shader_phong_vertex.glsl  shader_pick_fragment.glsl  shader_pick_vertex.glsl  shader_shadow_fragment.glsl  shader_shadow_vertex.glsl  vertex2d.shader
